# agents-core

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agents_core/: __init__.py
agents_core/evaluation/: __init__.py  judge.py  metrics.py
agents_core/llm/: __init__.py  caching.py  client.py  routing.py
agents_core/loop/: __init__.py  budget.py  dedup.py  react.py
agents_core/memory/: __init__.py  decay.py  reflection.py
agents_core/observability/: __init__.py  audit.py  langfuse_wrap.py
agents_core/safety/: __init__.py  confirmation.py  rate_limits.py
agents_core/templates/: __init__.py  canonical.txt
agents_core/tools/: __init__.py  registry.py  verification.py
agents_core/tools/common/: __init__.py  bitrix.py  customer_timeline.py  direct.py  hh.py  pg.py  rag.py  telegram.py
examples/: hello_agent.py
tests/: integration_bitrix_smoke.py  integration_cache_smoke.py  integration_direct_smoke.py  integration_hh_smoke.py  integration_rag_smoke.py  integration_react_smoke.py  integration_smoke.py  integration_telegram_smoke.py  test_caching.py  test_evaluation_judge.py  test_evaluation_metrics.py  test_llm_client.py  test_loop_budget.py  test_loop_dedup.py  test_loop_react.py  test_memory_reflection.py  test_observability_audit.py  test_routing.py  test_safety.py  test_smoke.py  test_templates.py  test_tools_bitrix.py  test_tools_customer_timeline.py  test_tools_direct.py  test_tools_hh.py  test_tools_pg.py  test_tools_rag.py  test_tools_registry.py  test_tools_telegram.py  test_tools_verification.py
