[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agents-core"
version = "0.0.1"
description = "Internal library for building reliable Claude-based ReAct agents (24bankrotstvo)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mihail Maklov", email = "myaklov@yandex.ru" }]
dependencies = [
    "anthropic>=0.39",
    "openai>=1.0",                 # DeepSeek OpenAI-compatible
    "pydantic>=2.5",
    "httpx>=0.27",
    "instructor>=1.7",
]

[project.optional-dependencies]
observability = ["langfuse>=4.0"]
pg = ["psycopg[binary,pool]>=3.2"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.10",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents_core*"]

[tool.setuptools.package-data]
"agents_core.templates" = ["*.txt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
